                                                        -*- coding: utf-8 -*-
Changes with Apache Traffic Server 6.0.0

  *) [TS-3266] core dump in connect_re_internal
  *) [TS-3589] Add TXN-COUNT condition to header_rewrite plugin.

  *) [TS-3058]: Fix TSVConnGetClosed to return a useful value in more situations.
  *) [TS-3539] Close excess file descriptors in crash log helper.

  *) [TS-3576] Remove the need for FIPS locking for OpenSSL

  *) [TS-3538]: Perform server certificate validity check.

  *) [TS-3575] Fix connection leak.

  *) [TS-3608] Client side SSL does not validate upstream hostname

  *) [TS-3667] Make SSL Handhake read correctly handle EOF and error cases.

  *) [TS-3560] Make proxy.config.http.slow.log.threshold overridable

  *) [TS-3378] SpdyRequest used after free()

Changes with Apache Traffic Server 5.3.0
 
  *) [TS-3597] TLS can fail accecpt / handshake when accept thread is turned off.

  *) [TS-3603] Debug Assert due to missing lock when accept_threads are disabled.

  *) [TS-3370] header_rewrite plugin uses dead continuation.

  *) [TS-3436] Add API milestones.

  *) [TS-3538] ATS should perform validity checks on certificate prior to serving.

  *) [TS-3531] Ignore blank lines in the plugin config file.

  *) [TS-3573] Fix connection leak.

  *) [TS-3558] Fix proxy.config.http.auth_server_session_private

  *) [TS-3533] Revert commits that break unregistered plugin loading.

  *) [TS-3551] Fix LogUtils.cc compile on Illumos.

  *) [TS-3548] Fix psiginfo usage on Illumos.

  *) [TS-3529] Add config option to allow ATS to start even if certificate files are bad.

  *) [TS-3522] Segfault due to inactivity_cop.

  *) [TS-3530] HTTP/2 memory leak with headers and more...

  *) [TS-3519] HTTP/2 seeing a lot of GOAWAY frames being sent

  *) [TS-3520] Fix logging core dump due to invalid unmapped url length/buffer

  *) [TS-3516] Fix various compile warnings with latest versions of clang.
